--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,65 @@
-/* add css module styles here (optional) */
+.multiTypeSliderParent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+.multiTypeSliderDataListParent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.multiTypeSliderDataListItemParent {
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 10%;
+  position: relative;
+}
+
+.multiTypeSliderParentSelectedSlideParent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+}
+
+.multiTypeSliderParentSelectedSlideImage {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.multiTypeSliderNextSlideControllerParent {
+  position: absolute;
+  top: 40%;
+  right: 5%;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.multiTypeSliderPrevSlideControllerParent {
+  position: absolute;
+  top: 40%;
+  left: 5%;
+  padding: 20px;
+  cursor: pointer;
+}
+.multiTypeSliderListItemActionButtonParent {
+  position: absolute;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.multiTypeSliderParentSelectedSlideVideo {
+  width: 100% !important;
+  height: auto !important;
 }
